--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,26 @@
 spring.devtools.restart.enabled = true
-serverUrl =https://6bda169a9ecf4d6d8acb4c2e925afbd2.us-central1.gcp.cloud.es.io:443
-apiKey =Rk1DRnNJc0JBS3NYREYzSWI0ZXg6dUtTSF85NEdTWWVyQXJQRU0yRks1QQ==
+#spring.cloud.gcp.secretmanager.enabled=true
+serverUrl =https://6bda169a9ecf4d6d8acb4c2e925afbd2.us-c
+#spring.config.import=sm://
+entral1.gcp.cloud.es.io:443
+#apiKey =Rk1DRnNJc0JBS3NYREYzSWI0ZXg6dUtTSF85NEdTWWVyQXJQRU0yRks1QQ==
+management.health.elasticsearch.enabled: false
+server.http2.enabled=true
+apiKey=${sm://apiKey}
+
+#mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/asrardb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+
+#MS SQL
+#spring.datasource.url=jdbc:sqlserver://ASRAR-HP;databaseName=MyDB;trustServerCertificate=true;integratedSecurity=true;
+#spring.datasource.username=asrar
+#spring.datasource.password=Outlookasrar123#
+#spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.show-sql=true
+
+caching.spring.usersTTL = 1
