--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.5'
 	id 'io.spring.dependency-management' version '1.1.3'
+	id 'com.google.cloud.tools.appengine' version '2.4.4'
 }
 
 group = 'com.elastic'
@@ -9,6 +10,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
 	sourceCompatibility = '17'
+	targetCompatibility = '17'
 }
 
 configurations {
@@ -16,7 +18,6 @@ configurations {
 		extendsFrom annotationProcessor
 	}
 }
-
 repositories {
 	mavenCentral()
 }
@@ -32,13 +33,20 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
+	implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '12.6.1.jre11'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
 	implementation 'com.google.cloud:spring-cloud-gcp-starter'
 	implementation 'org.springframework.cloud:spring-cloud-starter'
 	implementation 'co.elastic.clients:elasticsearch-java:7.17.14'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
 	compileOnly 'org.projectlombok:lombok'
+	compileOnly("org.springframework.boot:spring-boot-devtools")
+
+	implementation group: 'org.springframework.security', name: 'spring-security-rsa', version: '1.1.2'
+
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
@@ -51,7 +59,24 @@ dependencyManagement {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
+apply plugin: 'com.google.cloud.tools.appengine'
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+appengine {
+	deploy {
+		version = "GCLOUD_CONFIG"
+		projectId = "GCLOUD_CONFIG"
+	}
+}
+apply plugin: 'java'
+
+apply plugin: 'com.google.cloud.tools.appengine'
+
+
+jar {
+	manifest {
+		attributes 'Main-Class': 'com.elastic.searchservice.SearchServiceApplication'
+	}
 }
