--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8888
 spring.devtools.restart.enabled = true
 #spring.cloud.gcp.secretmanager.enabled=true
 serverUrl =https://6bda169a9ecf4d6d8acb4c2e925afbd2.us-c
