--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8888
 spring.devtools.restart.enabled = true
 #spring.cloud.gcp.secretmanager.enabled=true
-serverUrl =https://6bda169a9ecf4d6d8acb4c2e925afbd2.us-c
+serverUrl =
 #spring.config.import=sm://
 entral1.gcp.cloud.es.io:443
-#apiKey =Rk1DRnNJc0JBS3NYREYzSWI0ZXg6dUtTSF85NEdTWWVyQXJQRU0yRks1QQ==
+#apiKey =
 management.health.elasticsearch.enabled: false
 server.http2.enabled=true
 apiKey=${sm://apiKey}
@@ -19,7 +19,7 @@ spring.jpa.hibernate.ddl-auto=update
 #MS SQL
 #spring.datasource.url=jdbc:sqlserver://ASRAR-HP;databaseName=MyDB;trustServerCertificate=true;integratedSecurity=true;
 #spring.datasource.username=asrar
-#spring.datasource.password=Outlookasrar123#
+#spring.datasource.password=
 #spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=true
